New Notification Animation

--- a/notification.html
+++ b/notification.html
@@ -1,9 +1,9 @@
 <html>
 <head></head>
-<body style='overflow: hidden; -webkit-user-select: none;'>
+<body style='overflow: hidden; -webkit-user-select: none;' id="body-top">
 <div id="container">
 	<img src="" id="appIcon" />
-	<img src="" id="image" />
+	<img src="" id="image" class="pulse"/>
 	<div id="text">
 		<b id="title"></b>
 		<p id="message"></p>
